fixed invsee issues and modgui inventory cross server